k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cookmate
  labels:
    app.kubernetes.io/name: cookmate
    app.kubernetes.io/part-of: cookmate
